feat: isolate runtime data by tenant